--- a/VK_photo_downloader.ipynb
+++ b/VK_photo_downloader.ipynb
@@ -167,7 +167,7 @@
     "        photo_links.append(photo['sizes'][-1]['url'])\n",
     "    offset += download_num\n",
     "    \n",
-    "with open(f'dump_{public_id}_{album_id}_{offset}_{phs_num}_{now}.txt', 'w') as file:\n",
+    "with open(f'dump_{public_id}_{album_id}_{start_offset}_{phs_num}_{now}.txt', 'w') as file:\n",
     "    file.writelines('%s\\n' % link for link in photo_links)"
    ]
   },
@@ -190,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "url_filename = f'dump_{public_id}_{album_id}_{offset}_{phs_num}_{now}.txt'\n",
+    "url_filename = f'dump_{public_id}_{album_id}_{start_offset}_{phs_num}_{now}.txt'\n",
     "with open(url_filename, 'r') as file:\n",
     "    photo_links = file.read().splitlines()\n",
     "\n",
